manifests/0000_50_olm_01-networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-traffic
  namespace: openshift-operator-lifecycle-manager
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    capability.openshift.io/name: "OperatorLifecycleManager"
    include.release.openshift.io/hypershift: "true"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: olm-operator
  namespace: openshift-operator-lifecycle-manager
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    capability.openshift.io/name: "OperatorLifecycleManager"
    include.release.openshift.io/hypershift: "true"
spec:
  podSelector:
    matchLabels:
      app: olm-operator
  ingress:
    - ports:
        - port: metrics
          protocol: TCP
  egress:
    - {}
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
        - port: 5353
          protocol: TCP
        - port: 5353
          protocol: UDP
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: catalog-operator
  namespace: openshift-operator-lifecycle-manager
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    capability.openshift.io/name: "OperatorLifecycleManager"
    include.release.openshift.io/hypershift: "true"
spec:
  podSelector:
    matchLabels:
      app: catalog-operator
  ingress:
    - ports:
        - port: metrics
          protocol: TCP
  egress:
    - {}
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
        - port: 5353
          protocol: TCP
        - port: 5353
          protocol: UDP
    - ports:
        - protocol: TCP
          port: 50051
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: packageserver
  namespace: openshift-operator-lifecycle-manager
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    capability.openshift.io/name: "OperatorLifecycleManager"
    include.release.openshift.io/hypershift: "true"
spec:
  podSelector:
    matchLabels:
      app: packageserver
  ingress:
    - ports:
        - protocol: TCP
          port: 5443
  egress:
    - {}
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
        - port: 5353
          protocol: TCP
        - port: 5353
          protocol: UDP
    - ports:
        - protocol: TCP
          port: 50051
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-all
  namespace: openshift-operators
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    capability.openshift.io/name: "OperatorLifecycleManager"
    include.release.openshift.io/hypershift: "true"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: olm-catalog-grpc-ingress
  namespace: openshift-marketplace
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    capability.openshift.io/name: "OperatorLifecycleManager"
    include.release.openshift.io/hypershift: "true"
spec:
  podSelector:
    matchExpressions:
      - key: olm.catalogSource
        operator: Exists
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 50051
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bundle-unpack-egress
  namespace: openshift-marketplace
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    capability.openshift.io/name: "OperatorLifecycleManager"
    include.release.openshift.io/hypershift: "true"
spec:
  podSelector:
    matchExpressions:
      - key: operatorframework.io/bundle-unpack-ref
        operator: Exists
      - key: olm.managed
        operator: In
        values:
          - "true"
  policyTypes:
    - Egress
  egress:
    - {}
